--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -11,10 +11,10 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" routerLink="home" routerLinkActive="active">Home</a>
+                    <a class="nav-link" aria-current="page" routerLink="home" routerLinkActive="active">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="search" routerLinkActive="active">Search</a>
+                    <a class="nav-link" routerLink="search" routerLinkActive="active">Buscar</a>
                 </li>
             </ul>
         </div>
